Enhance ReactiveStringProcessor with improved method implementations and error handling; update documentation and tests for clarity